--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
                         <h5> <b>Previous Semester Information</b></h5>
                         <hr>
                     </div>
+
                     <div class="col-sm-12 col-md-6">
                         <div class="form-group">
                             <label for="curr_cgpa">Current CGPA:</label>
@@ -43,8 +44,14 @@
                         </div>
                     </div>
                 </div>
+                <br>
 
                 <div id="current_semester" class="row">
+                    <div class="col-sm-12">
+                        <h5> <b>Current Semester Information</b></h5>
+                        <hr>
+                    </div>
+
                     <div class="col-sm-12">
                         <div class="form-group">
                             <label for="curr_sem_courses">Courses Taken in Current Semester:</label>
@@ -61,7 +68,7 @@
                 <br>
 
                 <!------course-1----->
-                <div class="row">
+                <div id="course_1" class="row">
                     <div class="col-sm-12">
                         <h5><b>Course 1</b></h5>
                         <hr>
@@ -114,7 +121,7 @@
                 <br>
 
                 <!-----course-2---->
-                <div class="row">
+                <div id="course_2" class="row">
                     <div class="col-sm-12">
                         <h5><b>Course 2</b></h5>
                         <hr>
@@ -167,7 +174,7 @@
                 <br>
 
                 <!---course-3-->
-                <div class="row">
+                <div id="course_3" class="row">
                     <div class="col-sm-12">
                         <h5><b>Course 3</b></h5>
                         <hr>
@@ -221,7 +228,7 @@
 
 
                 <!---course-4-->
-                <div class="row">
+                <div id="course_4" class="row">
                     <div class="col-sm-12">
                         <h5><b>Course 4</b></h5>
                         <hr>
@@ -275,7 +282,7 @@
 
 
                 <!---course-5-->
-                <div class="row">
+                <div id="course_5" class="row">
                     <div class="col-sm-12">
                         <h5><b>Course 5</b></h5>
                         <hr>
@@ -330,7 +337,7 @@
 
 
                 <!---course-6-->
-                <div class="row">
+                <div id="course_6" class="row">
                     <div class="col-sm-12">
                         <h5><b>Course 6</b></h5>
                         <hr>
@@ -401,7 +408,7 @@
 
 
 
-    
+
     <!-----footer------->
     <div class="footer">
         <p>Copyright &copy; 2021 Developed by  <a href="https://cseshanewaz.me" target="_blank">@cseshanewaz</a> . 
@@ -416,6 +423,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+    <script src="index.js"></script>
 
 </body>
 
