--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </div>
 
 
-        <div class="card">
+        <div class="card" id="card2">
             <div class="card-body">
                 <h5>Grade Scale: 4.00</h5>
                 <br/>
@@ -85,6 +85,7 @@
                     <div class="col-sm-12">
                         <div class="form-group">
                             <label for="current_sem_course">Courses Taken in Current Semester:</label>
+                            
                             <select class="form-control" id="current_sem_course">
                                 <option>select number of courses</option>
                                 <option>2</option>
@@ -105,47 +106,49 @@
                         <hr>
                     </div>
 
+                    <!--
                     <div class="col-sm-12 col-md-3">
                         <div class="form-group">
                             <label for="course_title">Course Title:</label>
                             <input type="text" class="form-control" placeholder="E.g. CSE105" id="">
                         </div>
                     </div>
+                    --->
 
                     <div class="col-sm-12 col-md-3">
                         <div class="form-group">
                             <label for="credit_completed">Credit Hours:</label>
-                            <select class="form-control" id="credit_completed_1">
+                            <input type="text" class="form-control" id="credit_completed_1">
+                            <!-- <select class="form-control" id="credit_completed_1">
                                 <option value="">select course credit</option>
                                 <option value="">4</option>
                                 <option value="">3</option>
                                 <option value="">2</option>
                                 <option value="">1</option>
                                 <option value="">0</option>
-                            </select>
+                            </select> -->
                         </div>
                     </div>
 
                     <div class="col-sm-12 col-md-3">
                         <div class="form-group">
                             <label for="current_cgpa">Grade</label>
-                            <select class="form-control" id="current_cgpa_1">
-                                <option value="">select grade</option>
-                                <option value="4.00">A+</option>
-                                <option value="4.00">A</option>
-                                <option value="3.70">B+</option>
-                                <option value="3.30">B</option>
-                                <option value="3.00">B-</option>
-                                <option value="2.70">C+</option>
-                                <option value="2.30">C</option>
-                                <option value="2.00">C-</option>
-                                <option value="1.70">D+</option>
-                                <option value="1.30">D</option>
-                                <option value="1.00">D-</option>
-                                <option value="0.00">F</option>
-                                <option value="0.00">W</option>
-                                <option value="0.00">I</option>
-                            </select>
+                            <input type="text" class="form-control" id="current_cgpa_1">
+                            <!-- <select class="form-control" id="current_cgpa_1">
+                                <option>select grade</option>
+                                <option>4.00</option>
+                                <option>4.00</option>
+                                <option>3.70</option>
+                                <option>3.30</option>
+                                <option>3.00</option>
+                                <option>2.70</option>
+                                <option>2.30</option>
+                                <option>2.00</option>
+                                <option>1.70</option>
+                                <option>1.30</option>
+                                <option>1.00</option>
+                                <option>0.00</option>
+                            </select> -->
                         </div>
                     </div>
                 </div>
@@ -158,47 +161,52 @@
                         <hr>
                     </div>
 
+
+                    <!--
                     <div class="col-sm-12 col-md-3">
                         <div class="form-group">
                             <label for="course_title">Course Title:</label>
                             <input type="text" class="form-control" placeholder="E.g. CSE105" id="">
                         </div>
                     </div>
+                    -->
 
                     <div class="col-sm-12 col-md-3">
                         <div class="form-group">
                             <label for="credit_completed">Credit Hours:</label>
-                            <select class="form-control" id="credit_completed_2">
+                            <input type="text" class="form-control" id="credit_completed_2">
+                            <!-- <select class="form-control" id="credit_completed_2">
                                 <option value="">select course credit</option>
                                 <option value="">4</option>
                                 <option value="">3</option>
                                 <option value="">2</option>
                                 <option value="">1</option>
                                 <option value="">0</option>
-                            </select>
+                            </select> -->
                         </div>
                     </div>
 
                     <div class="col-sm-12 col-md-3">
                         <div class="form-group">
                             <label for="current_cgpa">Grade</label>
-                            <select class="form-control" id="current_cgpa_2">
+                            <input type="text" class="form-control" id="current_cgpa_2">
+                            <!-- <select class="form-control" id="current_cgpa_2">
                                 <option value="">select grade</option>
-                                <option value="4.00">A+</option>
-                                <option value="4.00">A</option>
-                                <option value="3.70">B+</option>
-                                <option value="3.30">B</option>
-                                <option value="3.00">B-</option>
-                                <option value="2.70">C+</option>
-                                <option value="2.30">C</option>
-                                <option value="2.00">C-</option>
-                                <option value="1.70">D+</option>
-                                <option value="1.30">D</option>
-                                <option value="1.00">D-</option>
-                                <option value="0.00">F</option>
-                                <option value="0.00">W</option>
-                                <option value="0.00">I</option>
-                            </select>
+                                <option value="">4.00</option>
+                                <option value="">4.00</option>
+                                <option value="">3.70</option>
+                                <option value="">3.30</option>
+                                <option value="">3.00</option>
+                                <option value="">2.70</option>
+                                <option value="">2.30</option>
+                                <option value="">2.00</option>
+                                <option value="">1.70</option>
+                                <option value="">1.30</option>
+                                <option value="">1.00</option>
+                                <option value="">0.00</option>
+                                <option value="">W</option>
+                                <option value="">I</option>
+                            </select> -->
                         </div>
                     </div>
                 </div>
@@ -426,6 +434,7 @@
                         <div align = "center">
                             <button type="button" id="next_btn" class="btn btn-outline-success btn-block">Next</button>
                             <button type="button" id="calculate_btn" class="btn btn-outline-danger btn-block">Calculate CGPA</button>
+                            <br/>
                         </div>
                     </div>
                 </div>
@@ -443,7 +452,7 @@
     <!-----footer------->
 
     <div class="footer">
-        <p>Copyright &copy; 2021 Developed by  <a href="https://cseshanewaz.me" target="_blank">@cseshanewaz</a> . 
+        <p>Copyright &copy; 2021 Developed by  <a href="https://cseshanewaz.me" target="_blank"> <b>@cseshanewaz</b></a> . 
             All Right Reserved</p>
     </div>
     
