--- a/index.html
+++ b/index.html
@@ -431,7 +431,7 @@
                         <div align = "center">
                             <button type="button" id="next_btn" class="btn btn-outline-success">Next</button>
                             <button type="button" id="calculate_btn" class="btn btn-outline-danger">Calculate CGPA</button>
-                            <button type="button" id="again_btn" class="btn btn-outline-warning btn-block">Calculate Again</button>
+                            <button type="button" id="again_btn" class="btn btn-outline-warning">Calculate Again</button>
                             <br/>
                         </div>
                     </div>
